dr-cf-sofe-prod-network.yaml
Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: drtest
  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 172.29.0.0/16
  PublicSubnetuse2a:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 172.29.0.0/24
  PublicSubnetuse2b:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 172.29.101.0/24
  PublicSubnetuse2c:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the third Availability Zone
    Type: String
    Default: 172.29.102.0/24

Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: !Ref VpcCIDR
        EnableDnsSupport: true
        EnableDnsHostnames: true
        InstanceTenancy: default
        Tags:
          - Key: Name
            Value: Production

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
       Tags:
        - Key: Name
          Value: !Ref EnvironmentName
# VPCGatewayAttachment
    InternetGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
       InternetGatewayId: !Ref InternetGateway
       VpcId: !Ref VPC
# Create Subnets for 3 availability zones
    PublicSubnetEC2use2a:
        Type: AWS::EC2::Subnet
        Properties:
           VpcId: !Ref VPC
           AvailabilityZone: us-east-2a
           CidrBlock: !Ref PublicSubnetuse2a
           MapPublicIpOnLaunch: true
           Tags:
            - Key: Name
              Value: EC2use2a-Public Subnet (AZ1)

    PublicSubnetEC2use2b:
        Type: AWS::EC2::Subnet
        Properties:
           VpcId: !Ref VPC
           AvailabilityZone: us-east-2b
           CidrBlock: !Ref PublicSubnetuse2b
           MapPublicIpOnLaunch: true
           Tags:
            - Key: Name
              Value: EC2use2b-Public Subnet (AZ2)

    PublicSubnetEC2use2c:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: us-east-2c
        CidrBlock: !Ref PublicSubnetuse2c
        MapPublicIpOnLaunch: true
        Tags:
         - Key: Name
           Value: EC2use2c-Public Subnet (AZ3)
# create Route table and attach InternetGateway, VPNGateway to it.
    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref VPC
          Tags:
           - Key: Name
             Value: Public Routes

    PublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
          RouteTableId: !Ref PublicRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway

# SubnetRouteTableAssociation
    PublicSubnet2aRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
         RouteTableId: !Ref PublicRouteTable
         SubnetId: !Ref PublicSubnetEC2use2a

    PublicSubnet2bRouteTableAssociation:
       Type: AWS::EC2::SubnetRouteTableAssociation
       Properties:
         RouteTableId: !Ref PublicRouteTable
         SubnetId: !Ref PublicSubnetEC2use2b

    PublicSubnet2cRouteTableAssociation:
       Type: AWS::EC2::SubnetRouteTableAssociation
       Properties:
         RouteTableId: !Ref PublicRouteTable
         SubnetId: !Ref PublicSubnetEC2use2c
# create security groups used
    SourceSG:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: SchoolObjects FrontEnds
        GroupName: schoolobjects
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - CidrIp: 52.90.142.24/32
            Description: VPN
            FromPort: -1
            IpProtocol: -1
            ToPort: -1
          - CidrIp: 192.168.5.0/24
            Description: Austin Office
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
          - CidrIp: 172.16.100.0/24
            Description: Plano Office
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
          - CidrIp: 66.196.202.86/32
            Description: Plano External IP
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
          - CidrIp: 209.163.175.50/32
            Description: Austin External IP
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
          - CidrIp: 172.30.250.10/32
            Description: Use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 172.30.251.10/32
            Description: use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
        Tags:
         - Key: Name
           Value: dr-SchoolObjects

    SGSchoolobjectselb:
     Type: AWS::EC2::SecurityGroup
     Properties:
        GroupDescription: SchoolObjects Load Balancer
        GroupName: schoolobjectselb
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - CidrIp: 0.0.0.0/0
            Description: HTTP
            FromPort: 80
            IpProtocol: tcp
            ToPort: 80
          - CidrIp: 0.0.0.0/0
            Description: HTTPS
            FromPort: 443
            IpProtocol: tcp
            ToPort: 443
          - CidrIp: 172.30.250.10/32
            Description: Use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 172.30.251.10/32
            Description: use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
        Tags:
         - Key: Name
           Value: dr-SchoolObjectslb
#ADD dr-AD-use1(sg-0ffd4124d1bdd59b7) ,ALL TCP, all traffic after creation.
    SGVPN:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: VPN instances
        GroupName : VPN
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - CidrIp: 0.0.0.0/0
            Description: HTTP
            FromPort: 80
            IpProtocol: tcp
            ToPort:   80
          - CidrIp: 0.0.0.0/0
            Description: HTTPS
            FromPort: 443
            IpProtocol: tcp
            ToPort:   443
          - CidrIp: 209.163.175.50/32
            Description: All
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 0.0.0.0/0
            Description: All
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 172.30.250.10/32
            Description: Use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 172.30.251.10/32
            Description: use1
            FromPort: 0
            IpProtocol: tcp
            ToPort: 65535
          - CidrIp: 192.168.5.0/24
            Description: Austin Office
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
          - CidrIp: 172.16.100.0/24
            Description: Plano Office
            FromPort: 3389
            IpProtocol: tcp
            ToPort: 3389
        Tags:
         - Key: Name
           Value: dr-VPN
    UtilitySecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Utility group
        VpcId: !Ref VPC
        SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 1701
          IpProtocol: UDP
          ToPort: 1701
        - CidrIp: 0.0.0.0/0
          FromPort: 1723
          IpProtocol: tcp
          ToPort: 1723
        - CidrIp: 0.0.0.0/0
          FromPort: 47
          IpProtocol: UDP
          ToPort: 47
        - CidrIp: 0.0.0.0/0
          FromPort: 9090
          IpProtocol: tcp
          ToPort: 9090
        - CidrIp: 0.0.0.0/0
          FromPort: 21
          IpProtocol: tcp
          ToPort: 21
        - CidrIp: 0.0.0.0/0
          FromPort: 1000
          IpProtocol: tcp
          ToPort: 1000
        - CidrIp: 0.0.0.0/0
          FromPort: 990
          IpProtocol: tcp
          ToPort: 990
        - CidrIp: 0.0.0.0/0
          FromPort: 4500
          IpProtocol: UDP
          ToPort: 4500
        - CidrIp: 0.0.0.0/0
          FromPort: 500
          IpProtocol: UDP
          ToPort: 500
        - CidrIp: 0.0.0.0/0
          FromPort: 11000
          IpProtocol: tcp
          ToPort: 13000
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 192.168.5.0/24
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 172.16.100.0/24
            # our second EC2 security
        Tags:
         - Key: Name
           Value: dr-UtilitySecurityGroup
    ADSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Enable tc access via ports
        VpcId:
          Fn::ImportValue: !Sub 'dr-sofe-prod-1-VPCID'
        SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 53
          IpProtocol: tcp
          ToPort: 53
        - CidrIp: 0.0.0.0/0
          FromPort: 53
          IpProtocol: UDP
          ToPort: 53
        - CidrIp: 0.0.0.0/0
          FromPort: 389
          IpProtocol: UDP
          ToPort: 389
        - CidrIp: 172.16.100.0/24
          Description: Plano Office
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 66.196.202.86/32
          Description: Plano External IP
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 192.168.5.0/24
          Description: Austin Office
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 172.16.100.0/24
          Description: Plano Office
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 172.30.250.10/32
          Description: Use1
          FromPort: 0
          IpProtocol: tcp
          ToPort: 65535
        - CidrIp: 172.30.251.10/32
          Description: use1
          FromPort: 0
          IpProtocol: tcp
          ToPort: 65535
# Add Vpc endpoint to give access to s3 in vpc
# Join appends set of values into a single value.

    S3Endpoint:
      Type: AWS::EC2::VPCEndpoint
      Properties:
        PolicyDocument:
          Version: 2012-10-17
          Statement:
              - Effect: Allow
                Principal: '*'
                Action:
                  - '*'
                Resource: '*'
        RouteTableIds:
            - !Ref PublicRouteTable
        ServiceName : !Sub 'com.amazonaws.${AWS::Region}.s3'
        VpcId: !Ref VPC
#Out put values that can be imported to other stacks.
#vpn
Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: "dr-sofe-prod-1-VPCID"

  StackPublicRouteTable:
    Description: Craete public route table
    Value: !Ref PublicRouteTable
    Export:
      Name: "PublicRouteTable"

# subnets 2a,2b,2c
  StackPublicSubnetEC2use2a:
    Description: Create Subnets for 3 availability zones
    Value: !Ref PublicSubnetEC2use2a
    Export:
      Name: "dr-sofe-prod-1-PublicSubnetEC2use2aID"

  StackPublicSubnetEC2use2b:
    Description: Create Subnets for 3 availability zones
    Value: !Ref PublicSubnetEC2use2b
    Export:
      Name:  "dr-sofe-prod-1-PublicSubnetEC2use2bID"

  StackPublicSubnetEC2use2c:
    Description: Create Subnets for 3 availability zones
    Value: !Ref PublicSubnetEC2use2c
    Export:
      Name: "dr-sofe-prod-1-PublicSubnetEC2use2cID"
  #VPC
  StackVpc:
    Description: public VPC
    Value: !Ref VPC
    Export:
      Name: "dr-sofe-prod-1-ProductionVPC"

  # SecurityGroups
  StackSGSchoolobjectselb:
    Description: School objects Security group
    Value: !Ref SGSchoolobjectselb
    Export:
      Name: "dr-sofe-prod-1-SGSchoolobjectselb"

  StackSourceSG:
    Description: Source security group
    Value: !Ref SourceSG
    Export:
     Name: "dr-sofe-prod-1-SourceSG"
# Hardcoding VPNGateway : Moved to VPN stack
  # DrOfficeVPNGateway:
  #   Description: school object stack
  #   Value: 'vgw-0778de0b63d928333'
  #   Export:
  #    Name: "dr-sofe-prod-1-VPNGateway"

  StackSGVPN:
    Description: school object stack
    Value: !Ref SGVPN
    Export:
     Name: "dr-sofe-prod-1-SGVPN"

#StackSourceEndpoinr
  StackEndPoint:
    Description: Aws Endpoint
    Value: !Ref S3Endpoint
    Export:
      Name: "dr-sofe-prod-1-S3Endpoint"
  UtilitySecurityGroup:
    Description: UtilitySecurity group
    Value: !Ref UtilitySecurityGroup
    Export:
      Name: "dr-sofe-prod-1-SGUtilitySecurityGroup"
  ADSecurityGroup:
    Description: UtilitySecurity group
    Value: !Ref UtilitySecurityGroup
    Export:
      Name: "dr-sofe-prod-1-ADSecurityGroup"
